--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </a>
       </div>
 
-      <footer class="center">©2021 <a class="grey" href="https://shreyagarwal13.github.io/shrey_personal_website/">Shrey Agarwal</a></footer>
+      <footer class="center"><a class="grey" target="_parent" href="https://www.megaflash.xyz">Home</a></footer>
     </div>
 
 
